Fix issue with orgs image getting squashed on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -266,7 +266,4 @@ width: 100%;
     padding: 15px;
   }
 
-  .org_banner_container img {
-    height: 48px;
-  }
 }
